# AliceO2

./: CHANGELOG.md  annotated.html  classes.html  dir_006ac155b3774986f9fa12ed9252f918.html  dir_00bec16f3b227e6f7befd3dbd7e61e41.html  dir_00f93da2d587000383105027a21cc5f6.html  dir_012f44601d7834f204d4249049adf73c.html  dir_016f66a9fb645873222c1016e54f5c8e.html  dir_0189f3ad6abecd72f822a0c3914f12b2.html  dir_01d249f9f1ea413118b8299f8515654e.html  dir_01d68d8da92fbef75811dc6520ae440e.html  dir_01ed7c24407540aaf34e1223f0277396.html  dir_022348068a13a69c0e47fc289d66acb8.html  dir_02327da50a4add2fe46b03f4277cb8e9.html  dir_032362cb8e4e063119218723e20381d8.html  dir_03284ba3c3f059587cc689a1c2ebdcfe.html  dir_0336a9574101ee92ba757e55f8f4d973.html  dir_0355333a068ab019f0e92698f15a77e4.html  dir_03680f297d755c096b0a1ead13ee12b7.html  dir_045047cd586a1f8ca969f3d2125bae58.html  dir_047746f9f311f49446db9474b7431d0d.html  dir_04bb2c7e8381d8e8f3171bacbf154f17.html  dir_04be1a46ec461cd022be61fe8d9e2176.html  dir_04d50ae63940aeb95e817f61b05edf98.html  dir_04ece05d7c7fe751e39bd0511b9068fc.html  dir_04efe6227c275c48803e66c564837fd2.html  dir_04f156109dbc2fc51b99c265fe2b4a64.html  dir_051dca18e802f8e9474f2e30d29c04e0.html  dir_05682412010bfc09918e6b47fa0d0e87.html  dir_0582c2dca9996fed6e556f113edddf80.html  dir_05913e0d3c3f8bd0936ad758bfc1f135.html  dir_05a16b4aafcf565bf27c80a83f092bb1.html  dir_05b755f4aad1a591457874b9e4739708.html  dir_060315bb4e10c5219228729354f1ddfd.html  dir_060542ae88c3eb8c9b22a30de881a7e9.html  dir_061f7088060f41729027f6c2fce0273e.html  dir_063fc62b398fdc1074cd76412a19dd49.html  dir_064d7f478c030df51e47c94b08ab25b1.html  dir_064de061aa902d7814a068197be3650e.html  dir_06b57d7d82bac68751338d82bd077daf.html  (+1788 more)
DataFormats/: CMakeLists.txt
Detectors/: CMakeLists.txt
Utilities/rANS/: CMakeLists.txt
Utilities/rANS/benchmarks/: bench_ransCompression.cxx  bench_ransDecodeScaling.cxx  bench_ransEncode.cxx  bench_ransEncodeImpl.cxx  bench_ransEncoder.cxx  bench_ransEncoderNew.cxx  bench_ransHistogram.cxx  bench_ransLiteralEncoder.cxx  bench_ransPack.cxx  bench_ransSIMD.cxx  bench_ransStreaming.cxx  bench_ransSymbolTableAccess.cxx  bench_ransTPC.cxx  bench_ransTPCFrequencyTable.cxx  bench_ransTPCNew.cxx  bench_ransUnpack.cxx  helpers.h
Utilities/rANS/include/rANS/: Decoder.h  DecoderFacade.h  DedupDecoder.h  DedupEncoder.h  DynamicFrequencyTable.h  DynamicSymbolTable.h  Encoder.h  EncoderFacade.h  FrequencyTable.h  HashFrequencyTable.h  HashMapFrequencyContainer.h  HashSymbolTable.h  LiteralDecoder.h  LiteralEncoder.h  LiteralSIMDEncoder.h  Packer.h  RenormedFrequencies.h  SIMDDecoder.h  SIMDEncoder.h  SimpleDecoder.h  SimpleEncoder.h  StaticFrequencyTable.h  StaticFrequencyTableContainer.h  StaticSymbolTable.h  SymbolTable.h  compat.h  definitions.h  factory.h  histogram.h  rans.h  renorm.h  serialize.h  typetraits.h  utils.h
Utilities/rANS/include/rANS/internal/: ContainerInterface.h  Decoder.h  DecoderBase.h  DecoderSymbol.h  DynamicFrequencyContainer.h  EncodeCommandInterface.h  Encoder.h  EncoderBase.h  EncoderSymbol.h  FrequencyContainer.h  FrequencyTableBase.h  HashFrequencyContainer.h  ReverseSymbolLookupTable.h  SIMDEncodeCommand.h  ShiftedVector.h  SingleStreamEncodeCommand.h  StaticContainerIterator.h  StaticFrequencyContainer.h  Symbol.h  SymbolMapper.h  SymbolStatistics.h  SymbolTable.h  SymbolTableContainer.h  helper.h
Utilities/rANS/include/rANS/internal/backend/cpp/: Decoder.h  DecoderSymbol.h  Encoder.h  EncoderSymbol.h  SimpleDecoder.h  SimpleEncoder.h
Utilities/rANS/include/rANS/internal/common/: containertraits.h  defaults.h  defines.h  exceptions.h  simdops.h  simdtypes.h  typetraits.h  utils.h
Utilities/rANS/include/rANS/internal/containers/: AdaptiveSymbolTable.h  AlignedArray.h  AttachableBuffer.h  BitPtr.h  Container.h  CountingContainer.h  DecoderSymbolTable.h  DenseHistogram.h  DenseSymbolTable.h  HashSymbolTable.h  HashTable.h  Histogram.h  HistogramInterface.h  HistogramView.h  LowRangeDecoderTable.h  OrderedSet.h  RenormedHistogram.h  ReverseSymbolLookupTable.h  ShiftableVector.h  SparseHistogram.h  SparseSymbolTable.h  SparseVector.h  Symbol.h  SymbolTable.h
Utilities/rANS/include/rANS/internal/decode/: Decoder.h  DecoderConcept.h  DecoderImpl.h
Utilities/rANS/include/rANS/internal/encode/: Encoder.h  EncoderImpl.h  EncoderSymbolMapper.h  SIMDEncoderImpl.h  SingleStreamEncoderImpl.h  simdKernel.h
Utilities/rANS/include/rANS/internal/metrics/: DictSizeEstimate.h  Metrics.h  SizeEstimate.h  properties.h  utils.h
Utilities/rANS/include/rANS/internal/pack/: eliasDelta.h  pack.h  utils.h
Utilities/rANS/include/rANS/internal/transform/: BitPtr.h  algorithm.h  algorithmImpl.h  hashAlgorithm.h  pack.h  renorm.h  sparseAlgorithm.h
Utilities/rANS/include/rANS/utils/: CombinedIterator.h  HistogramView.h  io.h  serialize.h
Utilities/rANS/include/rANSLegacy/: Decoder.h  Encoder.h  FrequencyTable.h  LiteralDecoder.h  LiteralEncoder.h  LiteralSIMDDecoder.h  LiteralSIMDEncoder.h  RenormedFrequencyTable.h  SIMDDecoder.h  SIMDEncoder.h  SimpleDecoder.h  SimpleEncoder.h  definitions.h  rans.h  renorm.h  utils.h
Utilities/rANS/include/rANSLegacy/internal/: DecoderBase.h  EncoderBase.h  ReverseSymbolLookupTable.h  Symbol.h  SymbolTable.h  helper.h
Utilities/rANS/include/rANSLegacy/utils/: HistogramView.h  iterators.h
Utilities/rANS/run/: bin-encode-decode.cxx
Utilities/rANS/src/: FrequencyTable.cxx  RenormedFrequencyTable.cxx
Utilities/rANS/test/: test_SIMDKernel.cxx  test_SIMDTypes.cxx  test_ransAlignedArray.cxx  test_ransAttachableBuffer.cxx  test_ransBitPtr.cxx  test_ransEncodeDecode.cxx  test_ransEncodeDecodeLargeScale.cxx  test_ransEncodeDecodeNew.cxx  test_ransFrequencyContainers.cxx  test_ransFrequencyTable.cxx  test_ransHistogramView.cxx  test_ransHistograms.cxx  test_ransMetrics.cxx  test_ransPack.cxx  test_ransPacker.cxx  test_ransReverseSymbolLookupTable.cxx  test_ransSIMD.cxx  test_ransSIMDEncoderKernels.cxx  test_ransSerialize.cxx  test_ransSparseVector.cxx  test_ransSymbolTable.cxx  test_ransSymbolTables.cxx  test_ransUtils.cxx
(+20377 files in other folders)
